--- a/cart.html
+++ b/cart.html
@@ -300,7 +300,8 @@
 </body>
 <script src="./js/jquery.js"></script>
 <script src="./js/jquery-ui.js"></script>
-<script src="./js/kits.js"></script>
+<script src="./js/kits2.js"></script>
+<script src="./js/comment.js"></script>
 <script src="./js/cart.js"></script>
 
 </html>
