--- a/detail.html
+++ b/detail.html
@@ -565,5 +565,7 @@
 </body>
 <script src="./js/data.js"></script>
 <script src="./js/jquery.js"></script>
+<script src="./js/kits2.js"></script>
+<script src="./js/comment.js"></script>
 <script src="./js/detail.js"></script>
 </html>
